--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,7 @@
         "issues": "https://github.com/tractorcow/silverstripe-sitemap2/issues"
     },
     "require": {
-        "silverstripe/framework": "^4",
-        "silverstripe/cms": "^4",
-        "silverstripe/vendor-plugin": "^1.0"
+        "silverstripe/framework": "^6"
     },
     "autoload": {
         "psr-4": {
